Fix: Footer overflow.

--- a/styles/about/layout/footer.css
+++ b/styles/about/layout/footer.css
@@ -7,7 +7,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, auto);
-    height: 260px;
+    height: fit-content;
     background-color: #053952;
     padding: 15px 5px;
     font-family: 'poppinsbold', sans-serif;
